# kundli_calc_

./: .gitignore  .pre-commit-config.yaml  ACTUAL_STATE.md  BRUTAL_TRUTH_CHART_ANALYSIS.md  COMMIT_MSG.txt  COMMIT_MSG10.txt  COMMIT_MSG11.txt  COMMIT_MSG12.txt  COMMIT_MSG2.txt  COMMIT_MSG3.txt  COMMIT_MSG4.txt  COMMIT_MSG5.txt  COMMIT_MSG6.txt  COMMIT_MSG7.txt  COMMIT_MSG8.txt  COMMIT_MSG9.txt  COMPREHENSIVE_ANALYSIS_2024.md  DEPLOYMENT.md  FINAL_SUMMARY.md  FIXES_PROGRESS.md  FRONTEND_FIX.md  JAGANNATHA_HORA_COMPARISON.md  Kundli Calculation web service_prompt.txt  MANUAL_TEST_CHECKLIST.md  MVP_ANALYSIS.md  MVP_GAP_ANALYSIS.md  PROJECT_BRUTAL_TRUTH.md  Project Roadmap and Framework_kundli_calculation_webservice.txt  QUICK_TEST.md  READY_TO_TEST.md  SESSION_COMPLETE.md  SESSION_COMPLETE_WORLD_CLASS.md  SESSION_SUMMARY.md  SUPABASE_SETUP.md  TESTING_COMPLETE_SUMMARY.md  TESTING_GUIDE.md  TEST_RESULTS.md  USER_CHART_ANALYSIS.md  WORLD_CLASS_PROGRESS.md  absolute_mode.md  (+15 more)
backend/: Dockerfile  (+5 more)
frontend/: .env.example  .env.production  .gitignore  Dockerfile  Kundli Calculation web service_prompt.txt  Project Roadmap and Framework_kundli_calculation_webservice.txt  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test.db
frontend/alembic/: env.py
frontend/backend/: .env.test  alembic.ini  docker-compose.yml  kundli.db  requirements.txt  test.db
frontend/coverage/: clover.xml  coverage-final.json  lcov.info
frontend/frontend-tmp/: .eslintrc.js  .prettierrc  Dockerfile  cypress.config.ts  nginx.conf  package-lock.json  package.json  tailwind.config.js
(+488 files in other folders)
